[project]
name = "markdown-podcast-narrator"
version = "0.1.0"
description = "Convert Markdown documents to podcast-style audio using local TTS"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "click>=8.1.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
qwen = [
    "qwen-tts",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
kokoro = [
    "kokoro",
    "misaki[en]",
]

[tool.setuptools]
py-modules = ["main", "parser", "narrator"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
